CMAKE_MINIMUM_REQUIRED(VERSION 3.16)
PROJECT (HUMMER LANGUAGES C CXX)
# SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -FMS-EXTENSIONS")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fms-extensions")
SET(CMAKE_BUILD_TYPE "DEBUG")

MESSAGE (STATUS "THIS IS BIRNARY DIR : " ${HUMMER_BINARY_DIR})
MESSAGE (STATUS "THIS IS SOURCE DIR : " ${HUMMER_SOURCE_DIR})

ADD_SUBDIRECTORY(Hummer)

SET (SRC_LIST Sandbox/Application.cpp)
ADD_EXECUTABLE(Application ${SRC_LIST})
TARGET_LINK_LIBRARIES(Application Hummerlib)
