CMAKE_MINIMUM_REQUIRED(VERSION 3.16)
PROJECT (HUMMER LANGUAGES C CXX)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fms-extensions")
SET(CMAKE_BUILD_TYPE "DEBUG")

# Give platform dll setting
ADD_DEFINITIONS(-DHM_PLATFORM_MAC -DHM_BUILD_DLL)

MESSAGE (STATUS "THIS IS BIRNARY DIR : " ${HUMMER_BINARY_DIR})
MESSAGE (STATUS "THIS IS SOURCE DIR : " ${HUMMER_SOURCE_DIR})

INCLUDE_DIRECTORIES(${HUMMER_SOURCE_DIR}/Hummer/src/)
# INCLUDE_DIRECTORIES(${HUMMER_SOURCE_DIR}/Hummer/src/Hummer/)

SET (HUMMER_SRC Hummer/src/Hummer/Application.cpp)
SET (SANDBOX_SRC Sandbox/src/SandboxApp.cpp Hummer/src/Hummer/Application.cpp)
ADD_EXECUTABLE(Application ${SANDBOX_SRC} ${HUMMER_SRC})
