# CMAKE_MINIMUM_REQUIRED(VERSION 3.16)
# PROJECT (HUMMER_ENGINE LANGUAGES C CXX)
# SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fms-extensions")
# SET(CMAKE_BUILD_TYPE "DEBUG")

# Give platform dll setting

# MESSAGE (STATUS "THIS IS HUMMER CMAKELISTS SOURCE DIR : " ${PROJECT_SOURCE_DIR})


# ADD_DEFINITIONS(-DHM_PLATFORM_MAC -DHM_BUILD_DLL)
# INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/vendor/spdlog/include/)

# SET (HUMMER_SRC ${PROJECT_SOURCE_DIR}/src/Hummer/Application.cpp)
# ADD_EXECUTABLE(Hummer_Engine ${HUMMER_SRC})





